# camflow-android-provenance

./: README.md  settings.gradle
android-cuttlefish-automation/: create-android-cuttlefish.sh
app/: build.gradle
app/src/androidTest/java/com/prov/provenance/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Changes Log of Building libprovenance and CamFlow userspace daemons.md  native-lib.cpp
app/src/main/cpp/camconfd/: CMakeLists.txt  camconf.h  config.c
app/src/main/cpp/camconfd/ini/: ini.c  ini.h
app/src/main/cpp/camflow-cli/: CMakeLists.txt  camflow.c
app/src/main/cpp/camflowdd/: CMakeLists.txt  main.c
app/src/main/cpp/camflowdd/camflowd-include/: service-config.h  service-log.h
app/src/main/cpp/example/: CMakeLists.txt  cp.c  printf.c  write.c
app/src/main/cpp/provenancelib/: CMakeLists.txt  libprovenance.c  provenanceJSONcommon.h  provenanceSPADEJSON.c  provenanceW3CJSON.c  provenancefilter.c  provenanceutils.c  relay.c  uthash.h
app/src/main/cpp/provenancelib/camflow-dev-include/: provenance_fs.h  provenance_types.h  provenanceh.h
app/src/main/cpp/provenancelib/libprovenance-include/: provenance.h  provenanceSPADEJSON.h  provenanceW3CJSON.h  provenance_utils.h  provenancefilter.h
app/src/main/cpp/provenancelib/threadpool/: CMakeLists.txt  thpool.c
app/src/main/java/com/prov/provenance/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/prov/provenance/: ExampleUnitTest.java
camflow-config-files/: camflow.ini  camflowd.ini
camflow-makefile-example/: Makefile
gradle/wrapper/: gradle-wrapper.properties
kernel-config-setting-shell/: modify-build-configs.sh
prebuilt-userspace-daemons/: camconfd  camflow-cli  camflowd  camflowexample
